--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="apple-mobile-web-app-title" content="John Hauge">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>webtest</title>
+  <title>John Hauge</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -31,7 +31,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '4048776724';
+    var serviceWorkerVersion = '1864383510';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
