--- a/index.html
+++ b/index.html
@@ -12,15 +12,25 @@
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
   <base href="/">
-
+we
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta property="og:title" content="John Hauge" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://johnhauge.github.io" />
+  <meta property="og:image" content="https://johnhauge.github.io/Portfolio/assets/Images/portfoliopagephoto.png"/>
+  <meta property="og:description" content="Game developer John Hauge's online portfolio." />
+  <meta name="theme-color" content="#FF0000">
+
+  <!-- Include this to make the og:image larger -->
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="description" content="Game developer John Hauge's online portfolio.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="John Hauge">
+
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <title>John Hauge</title>
@@ -31,7 +41,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1864383510';
+    var serviceWorkerVersion = '3876818420';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
